<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spreedly SDK Sample</string>
    <string name="tab_core_api">Core</string>
    <string name="tab_secure_widgets">Widgets</string>
    <string name="tab_compose_widgets" tools:ignore="ExtraTranslation">Compose</string>
    <string name="tab_edit" tools:ignore="ExtraTranslation">Edit Card</string>
    <string name="tab_3ds2">3DS2</string>
    <string name="tab_express">Express</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <string name="cvv_hint">CVV</string>
    <string name="credit_card_hint">Credit Card</string>
    <string name="name_hint">Name</string>
    <string name="submit">Submit</string>
    <string name="routing_number_hint">Routing Number</string>
    <string name="bank_account_hint">Bank Account</string>
    <string name="generic_error">Unexpected Error</string>
    <string name="pay_now_fragment">Pay Now! (fragment)</string>
    <string name="merchant_title">Lucy\'s shop</string>
    <string name="amount_hint">Amount</string>
    <string name="threeds_cancelled">Cancelled</string>
    <string name="threeds_timeout">Timeout</string>
    <string name="threeds_frictionless_success">Frictionless success</string>

</resources>
